--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.susi.integration</groupId>
-	<artifactId>pizza_service</artifactId>
+	<artifactId>pizza-service</artifactId>
 	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
@@ -19,6 +19,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
+		<timestamp>${maven.build.timestamp}</timestamp>
+		<maven.build.timestamp.format>yyyyMMdd_HHmm</maven.build.timestamp.format>
 	</properties>
 
 	<dependencies>
@@ -196,7 +198,7 @@
                           <phase>install</phase>
                         </execution>
                         
-                        <execution>
+                        <!-- execution>
                           <id>tag-latest</id>
                           <goals>
                             <goal>tag</goal>
@@ -206,7 +208,7 @@
                             <tag>latest</tag>
                           </configuration>
                           <phase>install</phase>
-                        </execution>
+                        </execution-->
                         
                         <execution>
                           <id>tag-version</id>
@@ -215,7 +217,7 @@
                             <goal>push</goal>
                           </goals>
                           <configuration>
-                            <tag>${git.commit.id.abbrev}</tag>
+                              <tag>${git.commit.id.abbrev}-${maven.build.timestamp}</tag>
                           </configuration>
                          <phase>install</phase>
                         </execution>
