--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,10 +1,12 @@
 spring.application.name=pizza_service
-spring.cloud.config.uri=http://13.70.68.92:8080
+spring.cloud.config.uri=http://52.189.225.67:8080
 encrypt.key=mysecretkey16bit
 spring.profiles.active=dev
 spring.cloud.config.username=root
 spring.cloud.config.password=s3cr3t
 management.endpoints.web.exposure.include=refresh
+#eureka.client.enabled=false
+#spring.cloud.discovery.enabled=false
 
 #connecting to secured server with a workaround
 #added config-server's public key into java cacert
