--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
-spring.application.name=pizza_service
+spring.application.name=pizza-service
 spring.cloud.config.uri=http://52.189.225.67:8080
 encrypt.key=mysecretkey16bit
 spring.profiles.active=dev
